--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <h1>Hori<span id="seo">seo</span>n</h1>
-      <div>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -21,7 +21,7 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
+      </nav>
       </header>
       </body>
     <figure class="hero"></figure>
